--- a/Projects - Web_Programming/Assignment_1/My_personal_webpage.html
+++ b/Projects - Web_Programming/Assignment_1/My_personal_webpage.html
@@ -19,7 +19,7 @@ section under construction
 <h3>Working expirience</h3>
 <h4>SEP 2016 – CURRENT</h4>
 <p>Broker - Securities & Financial Markets Department</p>
-<p>JSC Rietumu Bank</p>
+<p><b>JSC Rietumu Bank</b></p>
 <p>◦ Taking orders and executing at the best price on behalf of clients</p>
 <p>◦ Client coverage includes Stocks, Bonds, Futures, Options + OTC
 instruments</p>
@@ -30,11 +30,11 @@ information</p>
 provide a personalized and tailored service to specific client
 needs</p>
 <p>◦ Providing client with information about new products available on
-the market
-◦ Margin calls/Overdrafts supervision
-◦ Assisting other departments from a Brokerage side
-◦ Improvement of internal processes to enhance experience of a
-clients
-◦ Opening and managing IB and MT4 Accounts</p>
+the market</p>
+<p>◦ Margin calls/Overdrafts supervision</p>
+<p>◦ Assisting other departments from a Brokerage side</p>
+<p>◦ Improvement of internal processes to enhance experience of a
+clients</p>
+<p>◦ Opening and managing IB and MT4 Accounts</p> 
 </body>
 </html>
