--- a/Projects - Web_Programming/Assignment_1/My_personal_webpage.html
+++ b/Projects - Web_Programming/Assignment_1/My_personal_webpage.html
@@ -31,7 +31,7 @@ provide a personalized and tailored service to specific client
 needs</p>
 <p>◦ Providing client with information about new products available on
 the market</p>
-<p>◦ Margin calls/Overdrafts supervision</p>
+<p><i>◦ Margin calls/Overdrafts supervision</i></p>
 <p>◦ Assisting other departments from a Brokerage side</p>
 <p>◦ Improvement of internal processes to enhance experience of a
 clients</p>
