added italic in text type grouping

--- a/Projects - Web_Programming/Assignment_1/My_personal_webpage.html
+++ b/Projects - Web_Programming/Assignment_1/My_personal_webpage.html
@@ -8,6 +8,13 @@
     <style>
         img {
             width: 100px;
+            border-radius: 50px;
+            float: left;
+            margin-right: 10px;
+        }
+        .main_text {
+            font-family: 'Times New Roman', Times, serif;
+            font-style: italic;
         }
     </style>
 </head>
@@ -20,21 +27,21 @@ section under construction
 <h4>SEP 2016 – CURRENT</h4>
 <p>Broker - Securities & Financial Markets Department</p>
 <p><b>JSC Rietumu Bank</b></p>
-<p>◦ Taking orders and executing at the best price on behalf of clients</p>
-<p>◦ Client coverage includes Stocks, Bonds, Futures, Options + OTC
+<p class="main_text">◦ Taking orders and executing at the best price on behalf of clients</p>
+<p class="main_text">◦ Client coverage includes Stocks, Bonds, Futures, Options + OTC
 instruments</p>
-<p>◦ Maintaining and developing relationships with customers</p>
-<p>◦ Researching market and providing client with relevant
+<p class="main_text">◦ Maintaining and developing relationships with customers</p>
+<p class="main_text">◦ Researching market and providing client with relevant
 information</p>
-<p>◦ Staying aware of the clients various trading styles in order to
+<p class="main_text">◦ Staying aware of the clients various trading styles in order to
 provide a personalized and tailored service to specific client
 needs</p>
-<p>◦ Providing client with information about new products available on
+<p class="main_text">◦ Providing client with information about new products available on
 the market</p>
 <p><i>◦ Margin calls/Overdrafts supervision</i></p>
-<p>◦ Assisting other departments from a Brokerage side</p>
-<p>◦ Improvement of internal processes to enhance experience of a
+<p class="main_text">◦ Assisting other departments from a Brokerage side</p>
+<p class="main_text">◦ Improvement of internal processes to enhance experience of a
 clients</p>
-<p>◦ Opening and managing IB and MT4 Accounts</p> 
+<p class="main_text">◦ Opening and managing IB and MT4 Accounts</p> 
 </body>
 </html>
