added validator image

--- a/Projects - Web_Programming/Assignment_1/My_personal_webpage.html
+++ b/Projects - Web_Programming/Assignment_1/My_personal_webpage.html
@@ -1,47 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Bio page</title>
     <style>
-        img {
-            width: 100px;
-            border-radius: 50px;
-            float: left;
-            margin-right: 10px;
-        }
-        .main_text {
-            font-family: 'Times New Roman', Times, serif;
-            font-style: italic;
-        }
+      img {
+        width: 100px;
+        border-radius: 50px;
+        float: left;
+        margin-right: 10px;
+      }
+      .main_text {
+        font-family: "Times New Roman", Times, serif;
+        font-style: italic;
+      }
     </style>
-</head>
-<body bgcolor="#43aacc">
-    <img src="img/photo.jpg" alt="">
-<h1>Valerijs Kanevs</h1>
-<h2>Biogrphy</h2>
-section under construction
-<h3>Working expirience</h3>
-<h4>SEP 2016 – CURRENT</h4>
-<p>Broker - Securities & Financial Markets Department</p>
-<p><b>JSC Rietumu Bank</b></p>
-<p class="main_text">◦ Taking orders and executing at the best price on behalf of clients</p>
-<p class="main_text">◦ Client coverage includes Stocks, Bonds, Futures, Options + OTC
-instruments</p>
-<p class="main_text">◦ Maintaining and developing relationships with customers</p>
-<p class="main_text">◦ Researching market and providing client with relevant
-information</p>
-<p class="main_text">◦ Staying aware of the clients various trading styles in order to
-provide a personalized and tailored service to specific client
-needs</p>
-<p class="main_text">◦ Providing client with information about new products available on
-the market</p>
-<p><i>◦ Margin calls/Overdrafts supervision</i></p>
-<p class="main_text">◦ Assisting other departments from a Brokerage side</p>
-<p class="main_text">◦ Improvement of internal processes to enhance experience of a
-clients</p>
-<p class="main_text">◦ Openingand managing IB and MT4 Accounts</p> 
-</body>
+  </head>
+  <body bgcolor="#43aacc">
+    <img src="img/photo.jpg" alt="" />
+    <h1>Valerijs Kanevs</h1>
+    <h2>Biogrphy</h2>
+    section under construction
+    <h3>Working expirience</h3>
+    <h4>SEP 2016 – CURRENT</h4>
+    <p>Broker - Securities & Financial Markets Department</p>
+    <p><b>JSC Rietumu Bank</b></p>
+    <p class="main_text">
+      ◦ Taking orders and executing at the best price on behalf of clients
+    </p>
+    <p class="main_text">
+      ◦ Client coverage includes Stocks, Bonds, Futures, Options + OTC
+      instruments
+    </p>
+    <p class="main_text">
+      ◦ Maintaining and developing relationships with customers
+    </p>
+    <p class="main_text">
+      ◦ Researching market and providing client with relevant information
+    </p>
+    <p class="main_text">
+      ◦ Staying aware of the clients various trading styles in order to provide
+      a personalized and tailored service to specific client needs
+    </p>
+    <p class="main_text">
+      ◦ Providing client with information about new products available on the
+      market
+    </p>
+    <p><i>◦ Margin calls/Overdrafts supervision</i></p>
+    <p class="main_text">◦ Assisting other departments from a Brokerage side</p>
+    <p class="main_text">
+      ◦ Improvement of internal processes to enhance experience of a clients
+    </p>
+    <p class="main_text">◦ Opening and managing IB and MT4 Accounts</p>
+    <p>
+      <a href="http://jigsaw.w3.org/css-validator/check/referer">
+        <img
+          style="border: 0; width: 88px; height: 31px"
+          src="http://jigsaw.w3.org/css-validator/images/vcss"
+          alt="Valid CSS!"
+        />
+      </a>
+    </p>
+  </body>
 </html>
