--- a/Projects - Web_Programming/Assignment_1/My_personal_webpage.html
+++ b/Projects - Web_Programming/Assignment_1/My_personal_webpage.html
@@ -20,16 +20,28 @@
   </head>
   <body bgcolor="#43aacc">
     <img src="img/photo.jpg" alt="" />
-    <h1>Valerijs Kanevs</h1>
+    <address>
+    <h1>Valerijs Kanevs</br> 
+      130, Nichikyogokukitaoiricho, 110<br>
+      615-0881 kyoto, Japan
+    </h1>
+    </address>
     <h2>Biogrphy</h2>
     section under construction
     <h3>Working expirience</h3>
     <h4>SEP 2016 – CURRENT</h4>
     <p>Broker - Securities & Financial Markets Department</p>
-    <p><b>JSC Rietumu Bank</b></p>
+    <p>
+      <b><u>JSC Rietumu Bank</u></b>
+    </p>
     <p class="main_text">
       ◦ Taking orders and executing at the best price on behalf of clients
     </p>
+    <p class="main_text">
+      Making others to think that <abbr title="Water">H<sub>2</sub>O</abbr> is
+      new gold
+    </p>
+    <p class="main_text">◦ Remind managers about Synergy <s>3<sup>2</sup>=10</s> 3<sup>2</sup>=15</p>
     <p class="main_text">
       ◦ Client coverage includes Stocks, Bonds, Futures, Options + OTC
       instruments
@@ -41,12 +53,12 @@
       ◦ Researching market and providing client with relevant information
     </p>
     <p class="main_text">
-      ◦ Staying aware of the clients various trading styles in order to provide
-      a personalized and tailored service to specific client needs
+      ◦ Staying aware of the clients <wbr> various trading styles<wbr> in order to provide
+      a personalized and tailored<wbr> service to specific client needs
     </p>
     <p class="main_text">
       ◦ Providing client with information about new products available on the
-      market
+      market through <abbr title="Rietumu bank">RB</abbr> system
     </p>
     <p><i>◦ Margin calls/Overdrafts supervision</i></p>
     <p class="main_text">◦ Assisting other departments from a Brokerage side</p>
